--- a/.github/workflows/publish-es-packages.yml
+++ b/.github/workflows/publish-es-packages.yml
@@ -61,7 +61,7 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Build noir_js_types
-        run: yarn workspace @noir-lang/noir_js_types build
+        run: yarn workspace @noir-lang/types build
 
       - name: Build noir_wasm
         run: yarn workspace @noir-lang/noir_wasm build
