--- a/.github/workflows/publish-es-packages.yml
+++ b/.github/workflows/publish-es-packages.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install Yarn dependencies
         uses: ./.github/actions/setup
 
+      - name: Install wasm-opt
+        run: ./.github/scripts/wasm-opt-install.sh
+
       - name: Build noirc_abi
         run: ./.github/scripts/noirc-abi-build.sh
 
@@ -60,6 +63,9 @@ jobs:
 
       - name: Install Yarn dependencies
         uses: ./.github/actions/setup
+
+      - name: Install wasm-opt
+        run: ./.github/scripts/wasm-opt-install.sh
 
       - name: Build noir_js_types
         run: yarn workspace @noir-lang/types build
@@ -92,6 +98,9 @@ jobs:
 
       - name: Install Yarn dependencies
         uses: ./.github/actions/setup
+
+      - name: Install wasm-opt
+        run: ./.github/scripts/wasm-opt-install.sh
 
       - name: Build acvm_js
         run: ./.github/scripts/acvm_js-build.sh
