--- a/.github/workflows/test-js-packages.yml
+++ b/.github/workflows/test-js-packages.yml
@@ -66,6 +66,9 @@ jobs:
       - name: Install Yarn dependencies
         uses: ./.github/actions/setup
 
+      - name: Install wasm-opt
+        run: ./.github/scripts/wasm-opt-install.sh
+
       - name: Build noirc_abi
         run: ./.github/scripts/noirc-abi-build.sh
 
@@ -96,6 +99,9 @@ jobs:
 
       - name: Install Yarn dependencies
         uses: ./.github/actions/setup
+
+      - name: Install wasm-opt
+        run: ./.github/scripts/wasm-opt-install.sh
 
       - name: Build noir_js_types
         run: yarn workspace @noir-lang/types build
@@ -131,6 +137,9 @@ jobs:
 
       - name: Install Yarn dependencies
         uses: ./.github/actions/setup
+
+      - name: Install wasm-opt
+        run: ./.github/scripts/wasm-opt-install.sh
 
       - name: Build acvm_js
         run: ./.github/scripts/acvm_js-build.sh
