--- a/compiler/wasm/package.json
+++ b/compiler/wasm/package.json
@@ -65,6 +65,7 @@
     "chai": "^4.3.10",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.56.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "html-webpack-plugin": "^5.5.4",
     "memfs": "^4.6.0",
     "mocha": "^10.2.0",
