--- a/compiler/wasm/package.json
+++ b/compiler/wasm/package.json
@@ -70,6 +70,7 @@
     "mocha": "^10.2.0",
     "mocha-each": "^2.0.1",
     "path-browserify": "^1.0.1",
+    "prettier": "3.0.3",
     "process": "^0.11.10",
     "readable-stream": "^4.4.2",
     "sinon": "^17.0.1",
