--- a/build_manifest.yml
+++ b/build_manifest.yml
@@ -127,6 +127,7 @@ yarn-project-base:
   rebuildPatterns:
     - ^yarn-project/yarn-project-base/
     - ^yarn-project/yarn.lock
+    - ^yarn-project/.*/package.json$
   dependencies:
     - l1-contracts
     - bb.js
