--- a/compiler/wasm/package.json
+++ b/compiler/wasm/package.json
@@ -79,7 +79,8 @@
     "unzipit": "^1.4.3",
     "url": "^0.11.3",
     "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.0"
   },
   "dependencies": {
     "@noir-lang/types": "workspace:*",
