--- a/.github/workflows/test-js-packages.yml
+++ b/.github/workflows/test-js-packages.yml
@@ -183,10 +183,8 @@ jobs:
       - name: Set up test environment
         uses: ./.github/actions/setup
 
-      - name: Install playwright deps
-        run: |
-          npx playwright install
-          npx playwright install-deps
+      - name: Install Playwright
+        run: ./.github/scripts/playwright-install.sh
 
       - name: Run browser tests
         run: yarn workspace @noir-lang/acvm_js test:browser
