--- a/noir/acvm-repo/blackbox_solver/Cargo.toml
+++ b/noir/acvm-repo/blackbox_solver/Cargo.toml
@@ -18,7 +18,7 @@ thiserror.workspace = true
 
 blake2 = "0.10.6"
 blake3 = "1.5.0"
-sha2 = "0.10.6"
+sha2 = { version="0.10.6", features = ["compress",] }
 sha3 = "0.10.6"
 keccak = "0.1.4"
 k256 = { version = "0.11.0", features = [
