--- a/.github/workflows/publish-es-packages.yml
+++ b/.github/workflows/publish-es-packages.yml
@@ -114,7 +114,7 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
-          name: acvm_js
+          name: acvm-js
           path: acvm-repo/acvm_js
       
       - uses: actions/download-artifact@v4
