chore: fix trigger for force-push sticky comment

--- a/.github/workflows/pull-request-title.yml
+++ b/.github/workflows/pull-request-title.yml
@@ -31,7 +31,7 @@ jobs:
   force-push-comment:
     name: Warn external contributors about force-pushing
     runs-on: ubuntu-latest
-    if: github.repository != 'noir-lang/noir' && github.event_name == 'pull_request_target'
+    if: ${{ github.event_name == 'pull_request_target' && github.event.pull_request.head.repo.full_name != 'noir-lang/noir' }} 
     permissions:
       pull-requests: write
     
