--- a/.github/workflows/pull-request-title.yml
+++ b/.github/workflows/pull-request-title.yml
@@ -39,6 +39,10 @@ jobs:
       - name: Post comment on force pushes
         uses: marocchino/sticky-pull-request-comment@v2
         with:
-          path: ./.github/EXTERNAL_CONTRIBUTOR_PR_COMMENT.md
+          message: |
+            Thank you for your contribution to the Noir language.
 
+            Please **do not force push to this branch** after the Noir team have started review of this PR. Doing so will only delay us merging your PR as we will need to start the review process from scratch.
+
+            Thanks for your understanding.
           
